--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ jobs:
         run: |
           sudo apt-get install -y lftp
           lftp -c "
-            set ftp:ssl-allow no;
+            set ssl:verify-certificate no;
+            set ftp:ssl-force yes;
             open -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_SERVER }};
             mirror -R --verbose --exclude .git --exclude .github ./ ./;
             quit
