--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
           lftp -c "
             set ssl:verify-certificate no;
             set ftp:ssl-force yes;
+            set net:timeout 30;
+            set net:max-retries 3;
             open -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_SERVER }};
             mirror -R --verbose --exclude .git --exclude .github ./ ./;
             quit
