--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,18 +10,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Deploy via lftp
+      - name: Deploy via git-ftp
         run: |
-          sudo apt-get install -y lftp
-          lftp -c "
-            set ssl:verify-certificate no;
-            set ftp:ssl-allow yes;
-            set ftp:passive-mode yes;
-            set net:timeout 30;
-            set net:max-retries 3;
-            debug 3;
-            open -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} ${{ secrets.FTP_SERVER }};
-            mirror -R --verbose --exclude .git --exclude .github ./ ./;
-            quit
-          "
+          sudo apt-get install -y git-ftp
+          git ftp init --user "${{ secrets.FTP_USERNAME }}" --passwd "${{ secrets.FTP_PASSWORD }}" "ftp://${{ secrets.FTP_SERVER }}/"
+        continue-on-error: true
+
+      - name: Push updates via git-ftp
+        run: |
+          git ftp push --user "${{ secrets.FTP_USERNAME }}" --passwd "${{ secrets.FTP_PASSWORD }}" "ftp://${{ secrets.FTP_SERVER }}/"
