--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,19 +14,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to Lolipop via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        uses: sebastianpopp/ftp-action@releases/v2
         with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
+          host: ${{ secrets.FTP_SERVER }}
+          user: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: ${{ secrets.FTP_REMOTE_PATH }}
-          state-name: .ftp-deploy-sync-state.json
-          dry-run: false
-          exclude: |
-            **/.git*
-            **/.git*/**
-            **/node_modules/**
-            **/.vscode/**
-            **/.DS_Store
-            **/Thumbs.db
-            **/admin/**
+          remoteDir: ${{ secrets.FTP_REMOTE_PATH }}
+          localDir: "."
+          options: "--delete --verbose --exclude=.git/ --exclude=.github/ --exclude=node_modules/ --exclude=.vscode/ --exclude=admin/"
