--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,19 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to Lolipop via FTP
-        uses: sebastianpopp/ftp-action@releases/v2
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          host: ${{ secrets.FTP_SERVER }}
-          user: ${{ secrets.FTP_USERNAME }}
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          remoteDir: /acrylic-stand
-          localDir: "."
-          options: "--delete --verbose --exclude=.git/ --exclude=.github/ --exclude=node_modules/ --exclude=.vscode/ --exclude=admin/"
+          server-dir: /acrylic-stand/
+          dangerous-clean-slate: false
+          log-level: verbose
+          exclude: |
+            **/.git*
+            **/.git*/**
+            **/node_modules/**
+            **/.vscode/**
+            **/.DS_Store
+            **/Thumbs.db
+            **/admin/**
