--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,10 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: ./
+          protocol: ftp
+          port: 21
           dangerous-clean-slate: false
+          dry-run: false
           log-level: verbose
           exclude: |
             **/.git*
