--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,11 @@
 # Google Cloud Build Configuration
 # Automates building and deploying to Cloud Run
 #
+# This project uses Artifact Registry (Container Registry / gcr.io is deprecated).
 # Setup:
-# 1. gcloud builds submit --config cloudbuild.yaml
-# 2. Or setup automated triggers in Cloud Build console
+# 1) Create an Artifact Registry repo (example: akuriru-repo in asia-northeast1)
+# 2) Create a Cloud Build trigger connected to your GitHub repo
+# 3) On every push, Cloud Build will build+push+deploy automatically
 
 steps:
   # Step 1: Build Docker image
@@ -11,24 +13,24 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/akuriru-stand:$COMMIT_SHA'
+      - 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/akuriru-repo/akuriru-stand:$COMMIT_SHA'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/akuriru-stand:latest'
+      - 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/akuriru-repo/akuriru-stand:latest'
       - '.'
     id: 'build-image'
 
-  # Step 2: Push Docker image to Container Registry
+  # Step 2: Push Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/akuriru-stand:$COMMIT_SHA'
+      - 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/akuriru-repo/akuriru-stand:$COMMIT_SHA'
     id: 'push-image'
 
   # Step 3: Push latest tag
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'gcr.io/$PROJECT_ID/akuriru-stand:latest'
+      - 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/akuriru-repo/akuriru-stand:latest'
     id: 'push-latest'
 
   # Step 4: Deploy to Cloud Run
@@ -37,7 +39,7 @@ steps:
       - 'run'
       - 'deploy'
       - 'akuriru-stand'
-      - '--image=gcr.io/$PROJECT_ID/akuriru-stand:$COMMIT_SHA'
+      - '--image=asia-northeast1-docker.pkg.dev/$PROJECT_ID/akuriru-repo/akuriru-stand:$COMMIT_SHA'
       - '--region=asia-northeast1'
       - '--platform=managed'
       - '--allow-unauthenticated'
@@ -51,10 +53,10 @@ steps:
       - '--set-secrets=DB_PASS=DB_PASSWORD:latest,DB_USER=DB_USER:latest,DB_NAME=DB_NAME:latest,CLOUD_SQL_CONNECTION_NAME=CLOUD_SQL_CONNECTION_NAME:latest,GCS_BUCKET=GCS_BUCKET:latest'
     id: 'deploy-cloud-run'
 
-# Images to store in Container Registry
+# Images to store in Artifact Registry
 images:
-  - 'gcr.io/$PROJECT_ID/akuriru-stand:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/akuriru-stand:latest'
+  - 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/akuriru-repo/akuriru-stand:$COMMIT_SHA'
+  - 'asia-northeast1-docker.pkg.dev/$PROJECT_ID/akuriru-repo/akuriru-stand:latest'
 
 # Substitutions (can be overridden)
 substitutions:
@@ -64,7 +66,7 @@ substitutions:
 
 # Options
 options:
-  machineType: 'N1_HIGHCPU_8'
+  machineType: 'E2_MEDIUM'
   logging: CLOUD_LOGGING_ONLY
 
 # Timeout for entire build
